--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ wasm-bindgen = "0.2"
 fancy-regex = "0.13.0"
 lazy_static = "1.5.0"
 once_cell = "1.19.0"
+num-complex = "0.4"
 
 [features]
 default = []
