--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ lazy_static = "1.5.0"
 once_cell = "1.19.0"
 num-complex = "0.4"
 js-sys = "0.3.69"
+parking_lot = "0.12.3"
 
 [features]
 default = []
