--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,14 @@ wasm-bindgen = "0.2"
 fancy-regex = "0.13.0"
 lazy_static = "1.5.0"
 once_cell = "1.19.0"
-num-complex = "0.4"
+num-complex = { version = "0.4", features = ["serde"] }
 js-sys = "0.3.69"
 parking_lot = "0.12.3"
+serde = { version = "1.0.9", features = ["derive"] }
+serde_json = "1.0.9"
+web-sys = { version = "0.3.69", features = [
+  "OffscreenCanvasRenderingContext2d",
+] }
 
 [features]
 default = []
