--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ num-complex = { version = "0.4", features = ["serde"] }
 serde = { version = "1.0.9", features = ["derive"] }
 serde_json = "1.0.9"
 web-sys = { version = "0.3.69", features = [
-  "OffscreenCanvasRenderingContext2d"
+  "OffscreenCanvasRenderingContext2d", "OffscreenCanvas","WebGl2RenderingContext"
 ] }
 
 [features]
